...
    <string name="eink_theme_desc">Optimization for E-ink devices</string>
    <string name="get_storage_per">requires storage permission</string>
    <string name="double_click_exit">Tap again to exit the program</string>
    <string name="import_book_per">Import local books requires storage permission</string>
    <string name="network_connection_unavailable">Network connection is not available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">OK</string>
    <string name="sure_del">Are you sure to delete it?</string>
    <string name="sure_del_any">Are you sure to delete %s?</string>
    <string name="sure_del_all_book">Are you sure to delete all books？</string>
    <string name="sure_del_download_book">Do you want to delete the downloaded book chapters at the same time?</string>
    <string name="qr_per">Scan QR code requires Camera permissions</string>
...
    <string name="read_aloud_next_paragraph">Read aloud the next paragraph</string>
    <string name="wait_download">wait download</string>
    <string name="download_success">download success</string>
    <string name="download_error">download failure</string>
    <string name="downloading">downloading</string>
    <string name="unknown_state">unknown</string>
    <string name="disable_source">disable source</string>
    <string name="delete_source">delete source</string>
    <string name="chapter_pay">pay</string>
    <string name="double_page_horizontal">Tablet/Landscape Dual Page</string>
    <string name="open_in_browser">open in browser</string>
    <string name="download_from_github">Download from GitHub</string>
    <string name="download_from_backup_cdn">Download from cdn.gigu.edu.kg</string>
    <string name="download_from_second_cdn">Download from cdn.mgz.edu.kg</string>
...
